# git-observer

./: CMakeLists.txt  GitLogWidget.cpp  GitLogWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
